--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^12.0.5",
     "@react-native-community/masked-view": "0.1.10",
     "expo": "~42.0.1",
     "expo-app-loading": "^1.1.2",
@@ -22,6 +23,7 @@
     "react-native-screens": "~3.4.0",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.4",
+    "react-navigation-header-buttons": "^7.0.2",
     "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
